1. Magic fixture 2. Description to Product.Model 3. Nearly working filter 4. Carefully saving and deleting images 5. Scrollbars to trees 6. Cute addProduct template

--- a/theMarket/media/css/marketStyle.css
+++ b/theMarket/media/css/marketStyle.css
@@ -15,7 +15,7 @@ a
 
 div#content
 {
-    width: 500px;
+    width: 600px;
 }
 
 div#userinfo
@@ -45,7 +45,7 @@ form.field_list label
     float: left;
 }
 
-form.field_list input
+form.field_list input, form.field_list textarea
 {
     display: block;
 }
